Fixed header z-index

--- a/frontend/src/scss/04-elements/_base.scss
+++ b/frontend/src/scss/04-elements/_base.scss
@@ -33,7 +33,6 @@ body {
 }
 
 main {
-  display: grid;
   position: relative;
   flex: 1 0 auto;
 }
