--- a/frontend/src/scss/06-components/_header.scss
+++ b/frontend/src/scss/06-components/_header.scss
@@ -6,6 +6,7 @@
   padding-inline: 1rem;
   border-radius: 0 0 var(--border-radius) var(--border-radius);
   color: var(--color-light);
+  z-index: 1;
   
   &__nav {
     height: 100%;
@@ -46,16 +47,18 @@
       }
     }
     
-    &__link--active::after {
-      position: absolute;
-      content: '';
-      width: 100%;
-      height: 0.75rem;
-      bottom: 0;
-      border-radius: var(--border-radius) var(--border-radius) 0 0;
-      background-color: var(--color-secondary);
-      left: 50%;
-      transform: translateX(-50%);
+    &__link--active {
+      &::after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 0.75rem;
+        bottom: 0;
+        border-radius: var(--border-radius) var(--border-radius) 0 0;
+        background-color: var(--color-secondary);
+        left: 50%;
+        transform: translateX(-50%);
+      }
     }
   }  
 }
